# PyPIReleaseTool

./: .gitignore  README.md  pyproject.toml  release_to_pypi.py  requirements.txt
pypi_release_tool/: __init__.py  __main__.py  release_tool.py
test/: test_release_tool.py  test_twine_credentials.py
